--- a/preamble.tex
+++ b/preamble.tex
@@ -47,5 +47,6 @@
 \newcommand{\BPfield}{\ensuremath{\mathbb}}
 \newcommand{\BPset}{\ensuremath{\mathbb}}
 \newcommand{\BPvec}{\ensuremath{\vec}}
+\newcommand{\BPmat}{\ensuremath{\mathbb}}
 
 \usepackage{todonotes}
