--- a/zotero.bib
+++ b/zotero.bib
@@ -384,3 +384,12 @@
 	urldate = {2017-07-01},
 	date = {2004}
 }
+
+@article{goodfellow_maxout_2013,
+	title = {Maxout networks},
+	url = {http://www.jmlr.org/proceedings/papers/v28/goodfellow13.pdf},
+	journaltitle = {{arXiv} preprint {arXiv}:1302.4389},
+	author = {Goodfellow, Ian J. and Warde-Farley, David and Mirza, Mehdi and Courville, Aaron and Bengio, Yoshua},
+	urldate = {2017-07-02},
+	date = {2013}
+}
