--- a/model.tex
+++ b/model.tex
@@ -78,4 +78,25 @@ Takto lze vkládající funkci \( \phi_2 \) volit pouze díky modifikaci navrže
 
 Klasifikační funkce \( f : \BPfield R^{3n} \to \left\{ -1, +1 \right\} \) je definovaná neuronovou síťí, která je trénovaná společně s neuronovými sítěmi definujícími funkce \( k_D \), \( k_P \) a \( k_Q \).
 
+\section{Použité přenosové funkce}
+V modelech požitých k řešení úlohy popsané v kapitole \ref{problem} byly použity tři typy neuronů s různými \BPname{přenosovými funkcemi} (\BPenname{activation function}).
 
+\subsection{Lineární přenosová funkce}
+Jedním z nejjednoduších typů neuronů je neuron s lineární přenosovou funkcí, mající tvar (bez váhy a vychýlení)
+\[ f : \BPfield R \to \BPfield R : x \mapsto x \]
+
+\subsection{ReLU}
+Neurony typu \BPname{ReLU} (\BPenname{Rectified linear unit}) používají přenosovou funkci (bez váhy a vychýlení)
+\[ f : \BPfield R \to \BPfield R : x \mapsto \max \left\{ 0, x \right\} \]
+
+\subsection{Maxout}
+Pro neurony typu \BPname{maxout} (srov. \cite{goodfellow_maxout_2013}) nelze přenosovou funkci definovat stejně jednoduše jako v případě neuronů typu ReLU. Přenosová funkce \( h \) v tomto případě nebývá definována pro jednotlivé neurony, ale pro celou vrstvu neuronů po složkách \( h_i : \BPfield R^n \to \BPfield R \) jako funkce (včetně váhy a vychýlení)
+\[ h_i \left( x \right) = \max_{j \in \left[ 1, k \right]} z_{ij} \]
+kde
+\[ z_{ij} = x^T \BPmat W_{\cdot ij} + b_{ij} \]
+kde
+\[ \BPmat W \in \BPfield R^{n, m, k} \qquad b \in \BPfield R^{m, k} \]
+Lze tedy vrstvu maxout chápat jako \( k \) lineárních vrstev, z nichž je vybráno maximum výstupu.
+
+\section{Metody trénování neuronových sítí}
+Určitě ADAM, asi i popis základního SGD, možná souhrn metod (ADAMax, ADAgrad, ADAdelta, RMSprop)
