--- a/preamble.tex
+++ b/preamble.tex
@@ -15,6 +15,7 @@
 \usepackage{hyperref}
 \usepackage[ocgcolorlinks]{ocgx2}
 \usepackage{braket}
+\usepackage{enumerate}
 
 \geometry{tmargin=4cm,bmargin=3cm,lmargin=3cm,rmargin=2cm,headheight=0.8cm,headsep=1cm,footskip=0.5cm,marginparwidth=1.6cm}
 \setdefaultlanguage{czech}
