--- a/problem.tex
+++ b/problem.tex
@@ -50,6 +50,6 @@ Přístup pomocí Multi-instančního učení produkuje topologicky složitějš
 
 Multi-instanční přístup nám tedy dovoluje vytvořit model, jehož topologie odpovídá hierarchické struktuře adresy URL, je výpočetně méně náročný než srovnatelný klasický model a umožňuje znovupoužití některých částí. To jsou důvody, proč byl tento přístup zvolen.
 
-\section{Trénovací a testovací data}
+\section{Trénovací a testovací data}\label{dataset}
 
 \todo{Napsat}
