--- a/results.tex
+++ b/results.tex
@@ -1,5 +1,7 @@
 \chapter{Výsledky}
 
+Použité modely
+O tom, že všechny křivky jsou pro percentily.
 Hromada obrázků...
 
 \section{Srovnání různých modelů}
